# dragonpy

./: .gitignore  LICENSE  pyproject.toml
dragonpy/: dragonfly.py  dynamics.py
dragonpy/body/: __init__.py  muscles.py  sensors.py  wings.py
dragonpy/brain/: __init__.py
dragonpy/numerics/: __init__.py  rotations.py
dragonpy/world/: __init__.py  prey.py  wind.py
examples/: hover.py  intercept.py  smoke.py
